# polaroid-backend

./: README.md  TODO.md  pyproject.toml
src/authentication/: urls.py  views.py
src/config/: settings.py  urls.py
src/post/: serializers.py  views.py
src/post/migrations/: 0001_initial.py  0002_auto_20181031_1606.py
src/user/: models.py  urls.py  views.py
src/user/migrations/: 0001_initial.py  0002_auto_20181031_1642.py
